enabled double input

--- a/2D_Editor/MainWindow.xaml
+++ b/2D_Editor/MainWindow.xaml
@@ -113,25 +113,25 @@
                                                 <Separator/>
                                                 <Label>X Position</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding xPosition, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding xPosition, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.0}}" MinWidth="100"/>
                                                     <Label>%</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>Y Position</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding yPosition, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding yPosition, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.0}}" MinWidth="100"/>
                                                     <Label>%</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>X Scale</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding xScale, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding xScale, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.0}}" MinWidth="100"/>
                                                     <Label>%</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>YScale</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding yScale, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding yScale, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.0}}" MinWidth="100"/>
                                                     <Label>%</Label>
                                                 </StackPanel>
                                                 <Separator/>
@@ -147,19 +147,19 @@
                                                 <Separator/>
                                                 <Label>X Position</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding xPosition, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding xPosition, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.0}}" MinWidth="100"/>
                                                     <Label>%</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>Y Position</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding yPosition, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding yPosition, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.0}}" MinWidth="100"/>
                                                     <Label>%</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>Fontsize</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding fontsize, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding fontsize, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.0}}" MinWidth="100"/>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Button Tag="{Binding }" Click="Remove2DElementClicked">Remove Element</Button>
@@ -175,55 +175,55 @@
                                                 <Separator/>
                                                 <Label>X Position</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding xPosition, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding xPosition, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.000}}" MinWidth="100"/>
                                                     <Label>m</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>Y Position</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding yPosition, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding yPosition, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.000}}" MinWidth="100"/>
                                                     <Label>m</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>Z Position</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding zPosition, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding zPosition, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.000}}" MinWidth="100"/>
                                                     <Label>m</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>X Scale</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding xScale, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding xScale, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.000}}" MinWidth="100"/>
                                                     <Label>m</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>Y Scale</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding yScale, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding yScale, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.000}}" MinWidth="100"/>
                                                     <Label>m</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>Z Scale</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding zScale, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding zScale, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.000}}" MinWidth="100"/>
                                                     <Label>m</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>X Rotation</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding xRotation, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding xRotation, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.000}}" MinWidth="100"/>
                                                     <Label>°</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>Y Rotation</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding yRotation, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding yRotation, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.000}}" MinWidth="100"/>
                                                     <Label>°</Label>
                                                 </StackPanel>
                                                 <Separator/>
                                                 <Label>Z Rotation</Label>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBox Text="{Binding zRotation, UpdateSourceTrigger=PropertyChanged}" MinWidth="100"/>
+                                                    <TextBox Text="{Binding zRotation, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0.000}}" MinWidth="100"/>
                                                     <Label>°</Label>
                                                 </StackPanel>
                                             </StackPanel>
