--- a/2D_Editor/MainWindow.xaml
+++ b/2D_Editor/MainWindow.xaml
@@ -324,7 +324,7 @@
             <Border Grid.Row="0" Grid.RowSpan="1" Grid.Column="1" Grid.ColumnSpan="2"  Margin="5">
                 <Viewbox Stretch="Uniform">
                     <Border BorderBrush="#808e9b" BorderThickness="0.5">
-                        <ItemsControl x:Name="canvasPreview">
+                        <ItemsControl x:Name="canvasPreview" AllowDrop="True" Drop="canvasPreview_Drop">
                             <ItemsControl.Resources>
                                 <DataTemplate DataType="{x:Type impres:Image2D}">
                                     <Border BorderBrush="Blue" BorderThickness="{Binding highlighted, Converter={StaticResource BoolToThickness}}">
